--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <div class="nav-bar">
                 <ul class="flex-row">
-                    <li class="item-1"><a href="home.html">ABOUT US</a>
+                    <li class="item-1"><a href="index.html">ABOUT US</a>
                         <ul>
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
                             <li><a href="vision_mission.html"> VISION & MISSION</a></li>
