--- a/extra_curricular.html
+++ b/extra_curricular.html
@@ -120,7 +120,7 @@
             </div>
         </div>
     </header>
-activity page
+<figure style="display: flex; justify-content: center; align-items: center;"><img src="images/coming_soon.avif" style="mix-blend-mode: color-burn;"></figure>
         
 <footer>
     <div class="ftr-container">
