--- a/our_courses.html
+++ b/our_courses.html
@@ -129,10 +129,10 @@
         <div class="course-content">
             <h1> Pharma College in Jhansi &ndash; Modern College of Pharmacy </h1>
             <p style="margin-top:0pt; margin-bottom:22.5pt; line-height:normal; border-bottom:4.5pt solid #2a3869; padding-bottom:8pt; font-size:24pt;"><span style="font-family:Arial;"></span></p>
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">Are you looking for a</span><span style="font-family:Arial;">&nbsp;</span><strong><span style="font-family:Arial;">best B.Pharma college in Jhansi</span></strong><span style="font-family:Arial;">&nbsp;</span><span style="font-family:Arial;">to study pharmacy and seek the best career for it? Don&rsquo;t worry, this exists in Seiko CP the best college for students with a love for pharmacy.</span></p>
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">As the one the best college Seiko CP provides systematic career development programme empowering the profession with knowledgeable and adept pharmacists that match the rapidly changing healthcare setting All this makes us proud of state-of-the-art infrastructure, faculty with vast experience in the field, and an industry-oriented approach that allows our students to have one of the best educations and practical training.</span></p>
+        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">Are you looking for a</span><span style="font-family:Arial;">&nbsp;</span><strong><span style="font-family:Arial;">best B.Pharma college in Jhansi</span></strong><span style="font-family:Arial;">&nbsp;</span><span style="font-family:Arial;">to study pharmacy and seek the best career for it? Don&rsquo;t worry, this exists in jhansi the best college for students with a love for pharmacy.</span></p>
+        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">As the one the best college Modern College of Pharmacy provides systematic career development programme empowering the profession with knowledgeable and adept pharmacists that match the rapidly changing healthcare setting All this makes us proud of state-of-the-art infrastructure, faculty with vast experience in the field, and an industry-oriented approach that allows our students to have one of the best educations and practical training.</span></p>
         <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">&nbsp;</span></p>
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">Seiko CP needs no stand-in words. We know that the choice of college significantly influences the successful completion of studies. This is the main reason we are here to create an engaging learning space where scholars prosper, innovate, and achieve their full potential, a path to professional success. We place great significance on research and practical simulators owing to the fact that they provide students with the knowledge and experience that are required to undertake any work they encounter in their careers.</span></p>
+        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">Modern College of Pharmacy needs no stand-in words. We know that the choice of college significantly influences the successful completion of studies. This is the main reason we are here to create an engaging learning space where scholars prosper, innovate, and achieve their full potential, a path to professional success. We place great significance on research and practical simulators owing to the fact that they provide students with the knowledge and experience that are required to undertake any work they encounter in their careers.</span></p>
         <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">&nbsp;</span></p>
         <table cellspacing="0" cellpadding="0" style="width:100%; border:0.75pt solid #ffffff; border-collapse:collapse;">
             <tbody>
@@ -161,7 +161,7 @@
                         <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">4 Years</span></p>
                     </td>
                     <td style="width:144.4pt; border-top:0.75pt solid #ffffff; border-left:0.75pt solid #ffffff; border-bottom:0.75pt solid #eeece1; padding:6pt 5.62pt; vertical-align:middle; background-color:#dddddd;">
-                        <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">63300.00 (Per Year)</span></p>
+                        <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">---</span></p>
                     </td>
                 </tr>
                 <tr style="height:14.9pt;">
@@ -175,7 +175,7 @@
                         <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">2Year</span></p>
                     </td>
                     <td style="width:144.4pt; border-top:0.75pt solid #eeece1; border-left:0.75pt solid #ffffff; padding:6pt 5.62pt; vertical-align:middle; background-color:#dddddd;">
-                        <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">&nbsp;</span></p>
+                        <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';"> ---</span></p>
                     </td>
                 </tr>
             </tbody>
