--- a/principal_msg.html
+++ b/principal_msg.html
@@ -123,13 +123,13 @@
         <div class="content">
             <center><h2>PRINCIPAL'S MESSAGE</h2></center>
             <p>
-                Modern College of Pharmacy is a pioneer in Pharmacy education that aims to provide quality teaching towards employable standards. Located in a green eco-friendly campus, we offer par excellent Pharmacy education to produce professionals involved in drug development to bed side patient care. Large pool of pharmaceutical companies and Research Organizations participate in this drive.
+                Modern College of Pharmacy is a pioneer in Pharmacy education that aims to provide quality teaching towards employable standards. Located in a green eco-friendly campus, we offer excellent Pharmacy education to produce professionals involved in drug development to bed side patient care. Large pool of pharmaceutical companies and Research Organizations participate in this drive.
             </p>
             <p>
-                The institutes provide all latest instruments, ambience ofa class green campus and best Teachers and Researchers who are working round the clock of student welfare and care. 
+                The institutes provide all latest instruments, ambience of a class green campus and best Teachers and Researchers who are working round the clock of student welfare and care. 
             </p>
             <p>
-                TThere is overall personality development here with our concept of Finishing School. To experience the true joy of Learning come and join us and be a part of our institute.
+                There is overall personality development here with our concept of Finishing School. To experience the true joy of Learning come and join us and be a part of our institute.
             </p>
 
         </div>
