principal page updated

--- a/principal_msg.html
+++ b/principal_msg.html
@@ -138,7 +138,7 @@
                 <img src="images/principal.jpeg"> </img>  
             </figure>
             <div class="name">
-                <h4>Dr. Rohin Vishwanathan</h4>
+                <h4>Dr. ISHAB PALIWAL</h4>
                 <h3>(Principal)</h3>
             </div>
             
