--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
         <h1>Admission Open 2024-25</h1>
     </div>
     <div class="slick-content">
-        <img src="images/slides/slide-1.jpeg"></img>
+        <img src="images/slides/slide-1.jpg"></img>
         <img src="images/slides/slide-2.JPG"></img>
-        <img src="images/slides/slide-3.png"></img>
+        <img src="images/slides/slide-3.jpg"></img>
     </div>
 </div>
     
