--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
         <div class="item">
             <i class="fa-solid fa-location-dot"></i>
             <h4>OUR MAIN OFFICE</h4>
-            <p>582, Kochabhawar Kanpur Road,</p>
+            <p>Kochabhawar Kanpur Road,</p>
             <p>Jhansi-284128</p>
         </div>
         <div class="item">
@@ -193,7 +193,7 @@
             <div class="ftr-content">
                 <h2><i class="fa-solid fa-location-dot"></i>OUR CAMPUS</h2>
                 <ul>
-                    <p> Address: 554, Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
+                    <p> Address:Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
                     <p> Office Contact: 9889094094</p>
                     <p> Mail ID:</p>
                     <p>moderncollegeofpharmacyjhansi@gmail.com</p>
