--- a/principal_msg.html
+++ b/principal_msg.html
@@ -150,7 +150,7 @@
             <div class="ftr-content">
                 <h2><i class="fa-solid fa-location-dot"></i>OUR CAMPUS</h2>
                 <ul>
-                    <p> Address: 554, Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
+                    <p> Address:Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
                     <p> Office Contact: 9889094094</p>
                     <p> Mail ID:</p>
                     <p>moderncollegeofpharmacyjhansi@gmail.com</p>
