--- a/about_us.html
+++ b/about_us.html
@@ -17,7 +17,7 @@
     <header>
         <div class="head container">
             <div class="logo" id="logo-div">
-                <figure><img src="images/logo.png"></figure>
+                <figure><a href="index.html"><img src="images/logo.png"></a></figure>
             </div>
 
             <div class="top-nav">
