--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="head container">
             <div class="logo" id="logo-div">
-                <figure><img src="images/logo.png"></figure>
+                <figure><a href="index.html"><img src="images/logo.png"></a></figure>
             </div>
 
             <div class="top-nav">
@@ -228,6 +228,7 @@
             <div class="items"><img src="images/laboratories/pharmacology_lab.JPG"></img></div>
             <div class="items"><img src="images/laboratories/pharmacy_pract_lab.jpg"></img></div>
         </div>
+        <div class="slick-dots"></div>
     </div>
 
 
