--- a/facility.html
+++ b/facility.html
@@ -132,7 +132,7 @@
                 <img class="big-image" src="">
 
             </div>
-            <div class="facility-container">
+            <div class="container-2">
                 <div class="facility">
                     <img class="image" src="images/facilities/AC Auditorium.jpg" alt="">
                     <h3>AC AUDITORIUM</h3>
