--- a/laboratories.html
+++ b/laboratories.html
@@ -133,7 +133,7 @@
                 <img class="big-image" src="">
 
             </div>
-            <div class="facility-container">
+            <div class="container-2">
                 <div class="facility">
                     <img class="image" src="images/laboratories/biotech_lab.jpg" alt="">
                     <h3>BIOCHEMISTRY & BIOTECHNOLOGY LAB</h3>
