--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
     <div class="testimonial-container">
         <div class="testimonial">
-            <img src="images/founder.jpeg" alt="">
+            <img src="images/founder.jpg" alt="">
             <h3>(FOUNDER CHAIRMAN)</h3>
             <p>"Education is for improving the lives of others and for leaving your community and
                 world better than you found it"</p>
@@ -191,7 +191,7 @@
         </div>
 
         <div class="testimonial">
-            <img src="images/chairman.jpeg" alt="">
+            <img src="images/chairman.jpg" alt="">
             <h3>(CHAIRMAN)</h3>
             <p>"People who feel good about themselves produce good results and people who produce good results
                 feel good about themselves."</p>
@@ -200,7 +200,7 @@
 
         </div>
         <div class="testimonial">
-            <img src="images/director.jpeg" alt="">
+            <img src="images/director.jpg" alt="">
             <h3>(MANAGING DIRECTOR)</h3>
             <p>"Learning should be based on doing things and not merely knowing things.
                 Until and unless learning solutions relate to real life and motivate...."</p>
