--- a/about_us.html
+++ b/about_us.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <div class="head container">
+        <div class="head">
             <div class="logo" id="logo-div">
                 <figure><a href="index.html"><img src="images/logo.png"></a></figure>
             </div>
@@ -121,7 +121,7 @@
             </div>
         </div>
     </header>
-    <div class="text-container-2">
+    <div class="container-2">
         <div class="content">
             <center><h2>ABOUT COLLEGE</h2></center>
             <p>We provides students with quality education and trained them to become leaders and innovators in the Pharmacy profession. The College laboratories are highly equipped with sophisticated instruments. The faculty resources and best infrastructure available at the institute are utilized very efficiently and effectively enabling students to have an edge over others for immediate employment. Further, a team of qualified and well-trained faculties is committed to student success. All efforts are made to enhance student performance and lay emphasis on quality education practices.
