--- a/chairman_msg.html
+++ b/chairman_msg.html
@@ -122,7 +122,7 @@
         </div>
     </header>
 
-    <div class="text-container-2">
+    <div class="container-2">
         <div class="content">
             <center><h2>CHAIRPERSON'S MESSAGE</h2></center>
             <p>heartily congratulate the college for taking an ardent and intense interest in molding the smart future of students. We are set to take the missionof implementing new education methodologies to enable quality learning.
