--- a/founder_msg.html
+++ b/founder_msg.html
@@ -122,7 +122,7 @@
         </div>
     </header>
 
-    <div class="text-container-2">
+    <div class="container-2">
         <div class="content">
             <center><h2>FOUNDER CHAIRMAN'S MESSAGE</h2></center>
             <p>
