--- a/principal_msg.html
+++ b/principal_msg.html
@@ -121,7 +121,7 @@
         </div>
     </header>
     
-    <div class="text-container-2">
+    <div class="container-2">
         <div class="content">
             <center><h2>PRINCIPAL'S MESSAGE</h2></center>
             <p>
