--- a/workshops_seminars.html
+++ b/workshops_seminars.html
@@ -123,8 +123,8 @@
         </div>
     </header>
 
-    <figure style="display: flex; justify-content: center; align-items: center;">
-        <img src="images/coming_soon.jpg" style="mix-blend-mode: color-burn;"></figure>
+    <figure style="display: flex; justify-content: center; align-items: center; margin-top:110px;position: relative;">
+        <img src="images/coming_soon.jpg" style="mix-blend-mode: color-burn; margin-top: 100px;;"></figure>
 
         <footer>
             <div class="ftr-container">
