--- a/director_msg.html
+++ b/director_msg.html
@@ -122,7 +122,7 @@
         </div>
     </header>
     
-    <div class="text-container-2">
+    <div class="container-2">
         <div class="content">
             <center><h2>DIRECTOR'S MESSAGE</h2></center>
             <p><b>Welcome to the Modern College of Pharmacy!</b></p>
