--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </ul>
     
                     </li>
-                    <li class="item-6"><a href="mandatory_disclosure.html">MANDATORY DISCLOSURE</a></li>
+                    <li class="item-6"><a href="mandatory_disclosure.html">SIF-C</a></li>
                     <li class="item-7"><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
@@ -123,9 +123,6 @@
         </div>
     </header>
     <div class="slick-container">
-        <div class="text-content">
-            <h1>Admission Open 2024-25</h1>
-        </div>
         <div class="slick-content">
             <img src="images/slides/slide-1.jpg"></img>
             <img src="images/slides/slide-2.JPG"></img>
@@ -147,27 +144,23 @@
     <div class="card-wrapper">
         <div class="column">
             <div class="card card-color-1">
-                <h1 class="card-title">500+ </h1>
-                <h2>ADMISSIONS EVERY YEAR</h2>
+                <h1 class="card-title">PLACEMENT AND ENTREPRENEURIAL SUPPORT</h1>
                 <div class="card-img"></div>
             </div>
         </div>
         <div class="column">
             <div class="card card-color-2">
-                <h1 class="card-title">100+ </h1>
-                <h2>PLACEMENT EVERY YEAR</h2>
+                <h1 class="card-title">EXPERIENCED FACULTY </h1>
             </div>
         </div>
         <div class="column">
             <div class="card card-color-1">
-                <h1 class="card-title">600+ </h1>
-                <h2>ADMISSIONS EVERY YEAR</h2>
+                <h1 class="card-title">RICH LIBRARY RESOURCES </h1>
             </div>
         </div>
         <div class="column">
             <div class="card card-color-2">
-                <h1 class="card-title">600+ </h1>
-                <h2>ADMISSIONS EVERY YEAR</h2>
+                <h1 class="card-title">WELL EQUIPPED LABORATORIES</h1>
             </div>
         </div>
     </div>
