--- a/laboratories.html
+++ b/laboratories.html
@@ -122,58 +122,52 @@
         </div>
     </header>
    
-    <div class="course-container">
-        <div class="course-bg">
-            <div class="text-content">
-                <h1>Best Practical  Laboratories</h1>
-            </div>
-        </div>
-        <div class="course-content">
+    <div class="container-2">
+        <div class="heading">
             <h1> COLLEGE LABORATORIES </h1>
-            <div class="show-big-container">
-                <img class="big-image" src="">
-
-            </div>
-            <div class="container-2">
-                <div class="facility">
-                    <img class="image" src="images/laboratories/biotech_lab.jpg" alt="">
-                    <h3>BIOCHEMISTRY & BIOTECHNOLOGY LAB</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/central_instrument_lab.jpg" alt="">
-                    <h3>CENTRAL  INSTRUMENTATION  LAB</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/human_atonomy_lab.jpg" alt="">
-                    <h3>HUMAN ANATOMY &  PHYSIOLOGY LAB</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/machine_room.jpg" alt="">
-                    <h3>MACHINE ROOM</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/pharmaceutial_lab.JPG" alt="">
-                    <h3>PHARMACEUTIAL CHEMISTRY LAB</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/pharmaceutics_lab.JPG" alt="">
-                    <h3>PHARMACEUTICS LAB</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/pharmacognosy_lab.JPG" alt="">
-                    <h3>PHARMACOGNOSY LAB</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/pharmacology_lab.JPG" alt="">
-                    <h3>PHARMACOLOGY LAB</h3>
-                </div>
-                <div class="facility">
-                    <img class="image" src="images/laboratories/pharmacy_pract_lab.jpg" alt="">
-                    <h3>PHARMACY PRACTICE LAB</h3>
-                </div>
-
-            </div>     
         </div>
+        <div class="show-big-container">
+            <img class="big-image" src="">
+        </div>
+        <div class="inside-container">
+            <div class="facility">
+                <img class="image" src="images/laboratories/biotech_lab.jpg" alt="">
+                <h3>BIOCHEMISTRY & BIOTECHNOLOGY LAB</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/central_instrument_lab.jpg" alt="">
+                <h3>CENTRAL  INSTRUMENTATION  LAB</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/human_atonomy_lab.jpg" alt="">
+                <h3>HUMAN ANATOMY &  PHYSIOLOGY LAB</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/machine_room.jpg" alt="">
+                <h3>MACHINE ROOM</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/pharmaceutial_lab.JPG" alt="">
+                <h3>PHARMACEUTIAL CHEMISTRY LAB</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/pharmaceutics_lab.JPG" alt="">
+                <h3>PHARMACEUTICS LAB</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/pharmacognosy_lab.JPG" alt="">
+                <h3>PHARMACOGNOSY LAB</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/pharmacology_lab.JPG" alt="">
+                <h3>PHARMACOLOGY LAB</h3>
+            </div>
+            <div class="facility">
+                <img class="image" src="images/laboratories/pharmacy_pract_lab.jpg" alt="">
+                <h3>PHARMACY PRACTICE LAB</h3>
+            </div>
+        </div>     
+       
     </div>
 
     <footer>
