--- a/mandatory_disclosure.html
+++ b/mandatory_disclosure.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div class="head container">
+        <div class="head">
             <div class="logo" id="logo-div">
                 <figure><a href="index.html"><img src="images/logo.png"></a></figure>
             </div>
