--- a/our_courses.html
+++ b/our_courses.html
@@ -121,13 +121,8 @@
             </div>
         </div>
     </header>
-    <div class="course-container">
-        <div class="course-bg section0">
-            <div class="text-content">
-                <h1>Best Pharmacy College in Jhansi</h1>
-            </div>
-        </div>
-        <div class="course-content">
+    <div class="inside-container">
+        <div class="heading">
             <h1> Pharma College in Jhansi &ndash; Modern College of Pharmacy </h1>
             <p style="margin-top:0pt; margin-bottom:22.5pt; line-height:normal; border-bottom:4.5pt solid #2a3869; padding-bottom:8pt; font-size:24pt;"><span style="font-family:Arial;"></span></p>
         <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">Are you looking for a</span><span style="font-family:Arial;">&nbsp;</span><strong><span style="font-family:Arial;">best B.Pharma college in Jhansi</span></strong><span style="font-family:Arial;">&nbsp;</span><span style="font-family:Arial;">to study pharmacy and seek the best career for it? Don&rsquo;t worry, this exists in jhansi the best college for students with a love for pharmacy.</span></p>
