final updation done

--- a/about_us.html
+++ b/about_us.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <div class="head">
+        <div class="head container">
             <div class="logo" id="logo-div">
                 <figure><a href="index.html"><img src="images/logo.png"></a></figure>
             </div>
@@ -111,7 +111,7 @@
                         </ul>
     
                     </li>
-                    <li class="item-6"><a href="mandatory_disclosure.html">MANDATORY DISCLOSURE</a></li>
+                    <li class="item-6"><a href="mandatory_disclosure.html">SIF-C</a></li>
                     <li class="item-7"><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
