--- a/admission.html
+++ b/admission.html
@@ -111,7 +111,7 @@
                         </ul>
     
                     </li>
-                    <li class="item-6"><a href="mandatory_disclosure.html">MANDATORY DISCLOSURE</a></li>
+                    <li class="item-6"><a href="mandatory_disclosure.html">SIF-C</a></li>
                     <li class="item-7"><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
