--- a/laboratories.html
+++ b/laboratories.html
@@ -14,6 +14,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
     <header>
         <div class="head container">
             <div class="logo" id="logo-div">
@@ -130,45 +131,61 @@
             <img class="big-image" src="">
         </div>
         <div class="inside-container">
-            <div class="facility">
-                <img class="image" src="images/laboratories/biotech_lab.jpg" alt="">
+            <div class="images">
+               <a href="biotech_lab.html"> <img class="image" src="images/laboratories/biotech_lab.jpg" alt=""></a>
                 <h3>BIOCHEMISTRY & BIOTECHNOLOGY LAB</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/central_instrument_lab.jpg" alt="">
+            <div class="images">
+                <a href="central_instrument_lab.html">
+                    <img class="image" src="images/laboratories/central_instrument_lab.jpg" alt="">
+                </a>
                 <h3>CENTRAL  INSTRUMENTATION  LAB</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/human_atonomy_lab.jpg" alt="">
+            <div class="images">
+                <a href="human_anatomy_physio_lab.html">
+                    <img class="image" src="images/laboratories/human_atonomy_lab.jpg" alt="">
+                </a>
                 <h3>HUMAN ANATOMY &  PHYSIOLOGY LAB</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/machine_room.jpg" alt="">
+            <div class="images">
+                <a href="machine_room.html">
+                    <img class="image" src="images/laboratories/machine_room.jpg" alt="">
+                </a>
                 <h3>MACHINE ROOM</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/pharmaceutial_lab.JPG" alt="">
+            <div class="images">
+                <a href="pharmaceutial_chem_lab.html">
+                    <img class="image" src="images/laboratories/pharmaceutial_lab.JPG" alt="">
+                </a>
                 <h3>PHARMACEUTIAL CHEMISTRY LAB</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/pharmaceutics_lab.JPG" alt="">
+            <div class="images">
+                <a href="pharmaceutics_lab.html"> 
+                    <img class="image" src="images/laboratories/pharmaceutics_lab.JPG" alt="">
+                </a>
                 <h3>PHARMACEUTICS LAB</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/pharmacognosy_lab.JPG" alt="">
+            <div class="images">
+                <a href="pharmacognosy_lab.html"> 
+                    <img class="image" src="images/laboratories/pharmacognosy_lab.JPG" alt="">
+                </a>
                 <h3>PHARMACOGNOSY LAB</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/pharmacology_lab.JPG" alt="">
+            <div class="images">
+                <a href="pharmacology_lab.html"> 
+                    <img class="image" src="images/laboratories/pharmacology_lab.JPG" alt="">
+                </a>
                 <h3>PHARMACOLOGY LAB</h3>
             </div>
-            <div class="facility">
-                <img class="image" src="images/laboratories/pharmacy_pract_lab.jpg" alt="">
+            <div class="images">
+                <a href="pharmacy_practice_lab.html">
+                    <img class="image" src="images/laboratories/pharmacy_pract_lab.jpg" alt="">
+                </a> 
                 <h3>PHARMACY PRACTICE LAB</h3>
             </div>
         </div>     
        
-    </div>
+    </div> 
 
     <footer>
         <div class="ftr-container">
