--- a/facility.html
+++ b/facility.html
@@ -79,6 +79,7 @@
     
             <div class="nav-bar">
                 <ul class="flex-row">
+                    <a href="index.html"><i class="fa-solid fa-house"></i></a>
                     <li class="item-1"><a href="#">ABOUT US</a>
                         <ul>
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
@@ -99,7 +100,7 @@
                     <li class="item-4"><a href="admission.html">ADMISSIONS</a></li>
                     <li class="item-5"><a href="#">LIFE AT COLLEGE</a>
                         <ul>
-                            <li><a href="images.html"> FACILITIES</a></li>
+                            <li><a href="facility.html"> FACILITIES</a></li>
                             <li><a href="laboratories.html"> LABORATORIES</a></li>
                             <li><a href="extra_curricular.html"> EXTRA CURRICULAR</a></li>
                         </ul>
