--- a/scope_after_d.pharm.html
+++ b/scope_after_d.pharm.html
@@ -79,6 +79,7 @@
     
             <div class="nav-bar">
                 <ul class="flex-row">
+                    <a href="index.html"><i class="fa-solid fa-house"></i></a>
                     <li class="item-1"><a href="#">ABOUT US</a>
                         <ul>
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
@@ -121,7 +122,6 @@
             </div>
         </div>
     </header>
-
     <div class="text-container-3">
         <h1>SCOPE AFTER D.PHARM</h1>
         <h3>HOSPITAL PHARMACIST : </h3>
