--- a/workshops_seminars.html
+++ b/workshops_seminars.html
@@ -80,6 +80,7 @@
     
             <div class="nav-bar">
                 <ul class="flex-row">
+                    <a href="index.html"><i class="fa-solid fa-house"></i></a>
                     <li class="item-1"><a href="#">ABOUT US</a>
                         <ul>
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
