--- a/director_msg.html
+++ b/director_msg.html
@@ -136,7 +136,7 @@
         </div>
         <div class="content">
             <figure>
-                <img src="images/director.jpg"> </img>  
+                <img src="images/direction_fullimg.jpg"> </img>  
             </figure>
             <div class="name">
             <h4>Mr. Apoorv Shukla</h4>
