--- a/chairman_msg.html
+++ b/chairman_msg.html
@@ -136,7 +136,7 @@
         </div>
         <div class="content">
             <figure>
-                 <img src="images/chairman.jpg"></img>  
+                 <img src="images/chairman_fullimg.jpg"></img>  
             </figure>
             <div class="name">
             <h4>Dr. Rohin Vishwanathan</h4>
