--- a/founder_msg.html
+++ b/founder_msg.html
@@ -139,7 +139,7 @@
         
         <div class="content">
             <figure>
-                <img src="images/founder.jpg"> </img>  
+                <img src="images/founder_fullimg.jpg"> </img>  
             </figure>
             <div class="name">
             <h4>Capt.Arvind Vishwanathan</h4>
