--- a/principal_msg.html
+++ b/principal_msg.html
@@ -138,7 +138,7 @@
         </div>
         <div class="content">
             <figure>
-                <img src="images/principal.jpeg"> </img>  
+                <img src="images/principal_fullimg.jpg"> </img>  
             </figure>
             <div class="name">
                 <h4>Dr. ISHAB PALIWAL</h4>
