--- a/mandatory_disclosure.html
+++ b/mandatory_disclosure.html
@@ -126,7 +126,7 @@
     </header>
     <div class="mand-disc">
         <h1>MANDATORY_DISCLOSURE</h1>
-        <iframe src="documents/Final_SIF_Report.pdf">
+        <iframe src="">
         </iframe>
     </div>
     <footer>
