--- a/biotech_lab.html
+++ b/biotech_lab.html
@@ -129,7 +129,7 @@
             </div>
         </div>
     </header>
-    <div class="text-container-3">
+    <div class="text-container">
         <div class="heading">
             <h1> BIOCHEMISTRY AND BIOTECHNOLOGY LABORATORIES </h1>
         </div>
