--- a/machine_room.html
+++ b/machine_room.html
@@ -130,7 +130,7 @@
         </div>
     </header>
 
-    <div class="text-container-3">
+    <div class="text-container">
         <div class="heading">
             <h1> MACHINE ROOM </h1>
         </div>
