--- a/scope_after_b.pharm.html
+++ b/scope_after_b.pharm.html
@@ -130,7 +130,7 @@
         </div>
     </header>
 
-    <div class="text-container-3">
+    <div class="text-container">
 
         <h1>SCOPE AFTER B.PHARM</h1>
         <p><b>After earning the B.Pharm degree, candidates can opt for a wide range of professional or study paths. Some of the options those bachelors of pharmacy candidates usually choose from include: </b></p>
