--- a/admission.html
+++ b/admission.html
@@ -129,7 +129,7 @@
             </div>
         </div>
     </header>
-    <div class="text-container-3">
+    <div class="text-container">
 
         <h1>ADMISSION</h1>
 
