--- a/central_instrument_lab.html
+++ b/central_instrument_lab.html
@@ -130,7 +130,7 @@
         </div>
     </header>
 
-    <div class="text-container-3">
+    <div class="text-container">
         <div class="heading">
             <h1> CENTRAL INSTRUMENTATION LABORATORY</h1>
         </div>
