--- a/extra_curricular.html
+++ b/extra_curricular.html
@@ -130,8 +130,11 @@
         </div>
     </header>
     
-<figure style="display: flex; justify-content: center; align-items: center; margin-top:110px;position: relative;">
-    <img src="images/coming_soon.jpg" style="mix-blend-mode: color-burn; margin-top: 100px;;"></figure>
+    <div class="container-2">
+        <figure >
+            <img src="images/coming_soon.jpg">
+        </figure>
+    </div>
         
     <footer>
         <div class="ftr-container">
