--- a/human_anatomy_physio_lab.html
+++ b/human_anatomy_physio_lab.html
@@ -130,7 +130,7 @@
         </div>
     </header>
    
-    <div class="text-container-3">
+    <div class="text-container">
         <div class="heading">
             <h1> HUMAN ANATOMY &  PHYSIOLOGY LAB </h1>
         </div>
