--- a/pharmacy_practice_lab.html
+++ b/pharmacy_practice_lab.html
@@ -130,7 +130,7 @@
         </div>
     </header>
    
-    <div class="text-container-3">
+    <div class="text-container">
         <div class="heading">
             <h1> PHARMACY PRACTICE LAB</h1>
         </div>
