--- a/scope_after_d.pharm.html
+++ b/scope_after_d.pharm.html
@@ -129,7 +129,7 @@
             </div>
         </div>
     </header>
-    <div class="text-container-3">
+    <div class="text-container">
         <h1>SCOPE AFTER D.PHARM</h1>
         <h3>HOSPITAL PHARMACIST : </h3>
             <p>
