--- a/chairman_msg.html
+++ b/chairman_msg.html
@@ -151,7 +151,7 @@
             </figure>
             <div class="name">
             <h4>Dr. Rohin Vishwanathan</h4>
-            <h3>(Chairman)</h3>
+            <h3>(Chairperson)</h3>
             </div>
         </div>
     </div>
