--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
                             <li><a href="vision_mission.html"> VISION & MISSION</a></li>
                             <li><a href="founder_msg.html"> FOUNDER'S MESSAGE</a></li>
-                            <li><a href="chairman_msg.html"> CHAIRPERSON'S MESSAGE</a></li>
+                            <li><a href="chairperson_msg.html"> CHAIRPERSON'S MESSAGE</a></li>
                             <li><a href="director_msg.html"> DIRECTOR'S MESSAGE</a></li>
                             <li><a href="principal_msg.html"> PRINCIPAL'S MESSAGE</a></li>
                         </ul>
