--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <div class="testimonial">
             <img src="images/chairman.jpg" alt="">
-            <h3>(CHAIRMAN)</h3>
+            <h3>(CHAIRPERSON)</h3>
             <p>"People who feel good about themselves produce good results and people who produce good results
                 feel good about themselves."</p>
 
