--- a/about_us.html
+++ b/about_us.html
@@ -135,14 +135,14 @@
     </header>
     <div class="container-2">
         <div class="content">
-            <center><h2>ABOUT COLLEGE</h2></center>
+            <heading><h2>ABOUT COLLEGE</h2></heading>
             <p>We provides students with quality education and trained them to become leaders and innovators in the Pharmacy profession. The College laboratories are highly equipped with sophisticated instruments. The faculty resources and best infrastructure available at the institute are utilized very efficiently and effectively enabling students to have an edge over others for immediate employment. Further, a team of qualified and well-trained faculties is committed to student success. All efforts are made to enhance student performance and lay emphasis on quality education practices.
             </p>
             <p>The campus is an inspirational place to study, where students are encouraged and supported to reach their highest possible potential through the rich curriculum designed to suit their aspirations and strengths. We maintain a high standard of education and continuously strive to create a conducive environment for learning in order to promote great career. We believe in the process of reshaping the attitude of students and giving them the opportunity to explore and rediscover themselves.
             </p>
         </div>
         <div class="content">
-                 <img src="images/building.png"> </img> 
+                <figure> <img src="images/building.png"> </img> </figure>
         </div>
     </div>
 
