--- a/chairperson_msg.html
+++ b/chairperson_msg.html
@@ -135,7 +135,7 @@
     </header>
     <div class="container-2">
         <div class="content">
-            <center><h2>CHAIRPERSON'S MESSAGE</h2></center>
+            <heading><h2>CHAIRPERSON'S MESSAGE</h2></heading>
             <p> I heartily congratulate the college for taking an ardent and intense interest in molding the smart future of students. We are set to take the mission of implementing new education methodologies to enable quality learning.
             </p>
             <p>It also encourages independent thinking and helps the student in developing a wholesome personality so that they can contribute their best to the society and the country. We work together to make our Pharmacy College the best temple of learning, guiding and encouraging them in their own way.
