--- a/facility.html
+++ b/facility.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="images">
                     <img class="image" src="images/facilities/sports.jpg" alt="">
-                    <h3>SPROTS</h3>
+                    <h3>SPORTS</h3>
                 </div>
                 <div class="images">
                     <img class="image" src="images/facilities/Transport facilities.jpg" alt="">
