--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                         <ul>
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
                             <li><a href="vision_mission.html"> VISION & MISSION</a></li>
-                            <li><a href="founder_msg.html"> FOUNDER'S MESSAGE</a></li>
-                            <li><a href="chairperson_msg.html"> CHAIRPERSON'S MESSAGE</a></li>
-                            <li><a href="director_msg.html"> DIRECTOR'S MESSAGE</a></li>
+                            <li><a href="founder_msg.html"> FOUNDER CHAIRMAN'S MESSAGE</a></li>
+                            <li><a href="chairperson_msg.html"> CHAIRMAN'S MESSAGE</a></li>
+                            <li><a href="director_msg.html"> MANAGING DIRECTOR'S MESSAGE</a></li>
                             <li><a href="principal_msg.html"> PRINCIPAL'S MESSAGE</a></li>
                         </ul>
                     </li>
@@ -209,7 +209,7 @@
 
         <div class="testimonial">
             <img src="images/chairman.jpg" alt="">
-            <h3>(CHAIRPERSON)</h3>
+            <h3>(CHAIRMAN)</h3>
             <p>"People who feel good about themselves produce good results and people who produce good results
                 feel good about themselves."</p>
 
@@ -226,7 +226,7 @@
 
         <div class="testimonial">
             <img src="images/principal.jpeg" alt="">
-            <h3>(PRINCIPAL)</h3>
+            <h3>(DIRECTOR-CUM-PRINCIPAL)</h3>
             <p>"Modern College of Pharmacy is a pioneer in Pharmacy education that aims to provide quality teaching towards employable standards......."</p>
             <button id="more"><a href="principal_msg.html">Know More</a></button>
         </div>
