--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="#" target="_blank">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://youtube.com/@ModernCollegeofPharmacyJhansi?si=W8zUJ_VWWJC_0nKU" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                     <button class="enquiry-btn" type="submit" value="Enquiry">ENQUIRY FORM</button>
@@ -153,13 +153,13 @@
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </div>
-        <div class="elem"><a href="#" target="_blank">
-            <a href="#">
+        <div class="elem">
+            <a href="#" target="_blank">
                 <i class="fa-brands fa-twitter"></i>
             </a>
         </div>
-        <div class="elem"><a href="#" target="_blank">
-            <a href="#">
+        <div class="elem">
+            <a href="https://youtube.com/@ModernCollegeofPharmacyJhansi?si=W8zUJ_VWWJC_0nKU" target="_blank">
                 <i class="fa-brands fa-youtube"></i>
             </a>
         </div>
@@ -302,8 +302,8 @@
                             <i class="fa-brands fa-instagram"></i>
                         </a>
 
-                        <a href="#"> 
-                            <i class="fa-brands fa-twitter"></i>
+                        <a href="https://youtube.com/@ModernCollegeofPharmacyJhansi?si=W8zUJ_VWWJC_0nKU" target="_blank"> 
+                            <i class="fa-brands fa-youtube"></i>
                         </a>
 
                     </div>
