--- a/vision_mission.html
+++ b/vision_mission.html
@@ -35,7 +35,7 @@
                     <a href="#" target="_blank">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://youtube.com/@ModernCollegeofPharmacyJhansi?si=W8zUJ_VWWJC_0nKU" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                     <button class="enquiry-btn" type="submit" value="Enquiry">ENQUIRY FORM</button>
@@ -95,9 +95,9 @@
                         <ul>
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
                             <li><a href="vision_mission.html"> VISION & MISSION</a></li>
-                            <li><a href="founder_msg.html"> FOUNDER'S MESSAGE</a></li>
-                            <li><a href="chairperson_msg.html"> CHAIRPERSON'S MESSAGE</a></li>
-                            <li><a href="director_msg.html"> DIRECTOR'S MESSAGE</a></li>
+                            <li><a href="founder_msg.html"> FOUNDER CHAIRMAN'S MESSAGE</a></li>
+                            <li><a href="chairperson_msg.html"> CHAIRMAN'S MESSAGE</a></li>
+                            <li><a href="director_msg.html"> MANAGING DIRECTOR'S MESSAGE</a></li>
                             <li><a href="principal_msg.html"> PRINCIPAL'S MESSAGE</a></li>
                         </ul>
                     </li>
@@ -169,8 +169,8 @@
                             <i class="fa-brands fa-instagram"></i>
                         </a>
 
-                        <a href="#"> 
-                            <i class="fa-brands fa-twitter"></i>
+                        <a href="https://youtube.com/@ModernCollegeofPharmacyJhansi?si=W8zUJ_VWWJC_0nKU" target="_blank"> 
+                            <i class="fa-brands fa-youtube"></i>
                         </a>
 
                     </div>
