--- a/laboratories.html
+++ b/laboratories.html
@@ -134,11 +134,10 @@
             </div>
         </div>
     </header>
-   
+    <div class="main-heading">
+        <h1> COLLEGE LABORATORIES </h1>
+    </div>
     <div class="container-2">
-        <div class="heading">
-            <h1> COLLEGE LABORATORIES </h1>
-        </div>
         <div class="show-big-container">
             <img class="big-image" src="">
         </div>
