--- a/our_courses.html
+++ b/our_courses.html
@@ -133,7 +133,7 @@
             </div>
         </div>
     </header>
-    <div class="inside-container space">
+    <div class="inside-container space-2">
         <div class="heading">
             <h1> Pharma College in Jhansi &ndash; Modern College of Pharmacy </h1>
             <p style="margin-top:0pt; margin-bottom:22.5pt; line-height:normal; border-bottom:4.5pt solid #2a3869; padding-bottom:8pt; font-size:24pt;"><span style="font-family:Arial;"></span></p>
