--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
             </div>
             <div class="form-group">
                 <div class="row">
-                <button type="submit" value="submit" class="submit-btn">Submit</button>
+                <button type="submit" onclick="sendEmail()" type="submit" class="submit-btn">Submit</button>
                 </div>
             </div>
         </form>
