--- a/director_msg.html
+++ b/director_msg.html
@@ -133,10 +133,10 @@
             </div>
         </div>
     </header>
-    
+
     <div class="container-2">
         <div class="content">
-            <center><h2>MANAGING DIRECTOR'S MESSAGE</h2></center>
+            <heading><h2>MANAGING DIRECTOR'S MESSAGE</h2></heading>
             <p><b>Welcome to the Modern College of Pharmacy!</b></p>
             <p>It gives me immense pleasure to utter a few words about the credentials of our college. The college has remained a place of excogitation and excellence in Pharmacy education. As the needs of society and the profession change, the college explores new programs to better prepare upcoming pharmacists for an expanded role in the health care profession. The continuous changes in responsibilities and scope of practice of the pharmacists demand a serious commitment to life-long learning. In order to handle this arduous task, our college has an excellent group of faculty who are highly qualified and intrinsically motivated. They leave no stone unturned to mould the career of our students.
             </p>
@@ -146,13 +146,9 @@
             </p>
         </div>
         <div class="content">
-            <figure>
-                <img src="images/direction_fullimg.jpg"> </img>  
-            </figure>
-            <div class="name">
-            <h4>Mr. Apoorv Shukla</h4>
-            <h3>(Managing Director)</h3>
-            </div>
+                <figure> 
+                    <img src="images/director_fullimg.jpg"> </img> 
+                </figure>
         </div>
     </div>
         
