--- a/facility.html
+++ b/facility.html
@@ -133,10 +133,11 @@
             </div>
         </div>
     </header>
-    <div class="container-2">
-        <div class="heading">
+        <div class="main-heading">
             <h1> COLLEGE FACILITIES </h1>
         </div>
+    <div class="container-2">
+        
             <div class="show-big-container">
                 <img class="big-image" src="">
             </div>
