--- a/chairperson_msg.html
+++ b/chairperson_msg.html
@@ -148,6 +148,10 @@
                 <figure> 
                     <img src="images/chairman_fullimg.jpg"></img>  
                 </figure>
+                <div class="name">
+                    <h4>Dr. Rohin Vishwanathan</h4>
+                    <h3>(CHAIRMAN)</h3>
+                </div>
         </div>
     </div>
 
