--- a/director_msg.html
+++ b/director_msg.html
@@ -149,6 +149,10 @@
                 <figure> 
                     <img src="images/director_fullimg.jpg"> </img> 
                 </figure>
+                <div class="name">
+                    <h4>Mr. APOORV SHUKLA</h4>
+                    <h3>(MANAGING DIRECTOR)</h3>
+                </div>
         </div>
     </div>
         
