--- a/principal_msg.html
+++ b/principal_msg.html
@@ -140,7 +140,7 @@
                 Modern College of Pharmacy is a pioneer in Pharmacy education that aims to provide quality teaching towards employable standards. Located in a green eco-friendly campus, we offer excellent Pharmacy education to produce professionals involved in drug development to bed side patient care. Large pool of pharmaceutical companies and research organizations participate in this drive.
             </p>
             <p>
-                The institutes provide all latest instruments, ambience of a class green campus and best Teachers and Researchers who are working round the clock of student welfare and care. 
+                The institute provide all advanced instruments, lush green campus, best Teachers and Researchers who are working round the clock of student welfare and care. 
             </p>
             <p>
                 There is overall personality development here with our concept of Finishing School. To experience the true joy of Learning come and join us and be a part of our institute.
