--- a/scope_after_b.pharm.html
+++ b/scope_after_b.pharm.html
@@ -161,7 +161,7 @@
         <p>In the medical industry, sales and marketing jobs are taken up by most pharmacy graduates. In the domain of sales, numerous job opportunities are available. These have excellent salary structure. You can also get lucrative incentives that are offered upon good performance. This job is challenging, but higher salary, recognition, perks and promotions are some of the excellent benefits. </p>
         <h3>LECTURER: </h3>
         <p>First Class students are eligible to teach as lecturers in the D Pharm programme in D.Pharm Colleges after 03 Years of experience in pharma sector. </p>
-        <h3>PHARMACY BUISNESS: </h3>
+        <h3>PHARMACY BUSINESS: </h3>
         <p>After going through all of the ethical and legal requirements set forth by the monitoring agencies, the main employment responsibility will be to distribute and dispense medicines in either retail or wholesale, regionally or across India, while ensuring that safe and correct medicines are delivered to the public. </p>
 
     </div>
