--- a/founder_msg.html
+++ b/founder_msg.html
@@ -137,13 +137,13 @@
         <div class="content">
             <center><h2>FOUNDER CHAIRMAN'S MESSAGE</h2></center>
             <p>
-                <b>“Education is for improving the lives of others and for leaving your community and 
+                <b>“Education is for improving the lives of others and leaving your community and 
                 world better than you found it”</b>
             </p>
             <p>
-                India is emerging to be a global leader in information technology, Pharmaceutical technology and Biotechnology. The quality of medicines manufactured in India is proven to be of world class standard and many Indian Pharmaceutical companies have taken the lead to capture the world pharmaceutical Market. To capture the world pharmaceutical market we need a world class competent pharmacist in the area of Manufacturing, Research and Development, Quality Assurance and Marketing.
+                India is emerging to be a global leader in information technology, Pharmaceutical technology and Biotechnology. The quality of medicines manufactured in India is proven to be of world class standard and many Indian Pharmaceutical companies have taken the lead to capture the world pharmaceutical Market. To capture it we need a world class competent pharmacist in the area of Manufacturing, Research and Development, Quality Assurance and Marketing.
             <p>
-                We are very much happy that Modern College of Pharmacy is committed to provide efficient infrastructure, laboratories, equipment and to develop the students as competent pharmacists and highly qualified and dedicated professionals in the future. We are continuously working to improvise the concept of Pharmacy education in today’s global era with an aim to serve humanity better.
+                We are delighted that Modern College of Pharmacy is committed to provide efficient infrastructure, laboratories, equipment and to develop the students as competent pharmacists and highly qualified and dedicated professionals in the future. We are continuously working to improvise the concept of Pharmacy education in today’s global era with an aim to serve humanity better.
             </p>           
         </div>
         
