--- a/index.html
+++ b/index.html
@@ -287,9 +287,7 @@
                 <h2><i class="fa-solid fa-phone"></i>CONTACT US</h2>
                 <ul>
                     <p> For Students Helpdesk: 7348550088</p>
-                    <p> Other Enquiry
-                        And Help Desk
-                        7318027770
+                    <p> For Other Enquiries: 7318027770
                     </p>
 
                     <div class="elem">
