--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <p>"People who feel good about themselves produce good results and people who produce good results
                 feel good about themselves."</p>
 
-            <button id="more"><a href="chairman_msg.html">Know More</a></button>
+            <button id="more"><a href="chairperson_msg.html">Know More</a></button>
 
         </div>
         <div class="testimonial">
