updated chairman msg

--- a/chairperson_msg.html
+++ b/chairperson_msg.html
@@ -137,7 +137,11 @@
     <div class="container-2">
         <div class="content">
             <heading><h2>CHAIRMAN'S MESSAGE</h2></heading>
-            <p>I heartily congratulate the college for taking an ardent and intense interest in molding the smart future of students. We are set to take the mission of implementing new education methodologies to enable quality learning. It also encourages independent thinking and helps the student in developing a wholesome personality so that they can contribute their best to the society and the country. We work together to make our Pharmacy College the best temple of learning, guiding and encouraging them in their own way.
+            <p>I heartily congratulate the college for taking an ardent and intense interest in molding the smart future of students. We are set to take the mission of implementing new education methodologies to enable quality learning. It also encourages independent thinking and helps the student in developing a wholesome personality so that they can contribute their best to the society and the country. 
+                The development of any country is based on the development of Human resources that are trained and developed by educational institutions.
+            </p>
+            <p>Our institution intends to prepare the students for their future by providing not only knowledge but also impart training for the overall development of the individual.
+                We, at Modern College of Pharmacy, Jhansi are motivated not only to provide quality education but also to create competent, confident and skilled professionals. Our focus is therefore, to be the leading pharmacy professional training and research institute that imparts quality education and stress on overall personality development of its pupil and thereby envisioned to build a strong competent Pharmacy professionals for the nation.
             </p>
             <p>We aim to produce top-notch professionals with their colorful flag flying in the air of success in this pulsating world of competition.
             </p>
