--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <li class="item-3"><a href="#">ACADEMICS</a>
                         <ul>
                             <li><a href="our_courses.html">OUR COURSES</a></li>
-                            <li><a href="workshops_seminars.html"> WORKSHOPS & SEMINARS</a></li>
+                            <li><a href="workshops_seminars.html">EDUCATIONAL EVENTS</a></li>
     
                         </ul>
                     </li>
@@ -121,6 +121,7 @@
                         <ul>
                             <li><a href="scope_after_b.pharm.html"> SCOPE AFTER B.PHARM</a></li>
                             <li><a href="scope_after_d.pharm.html"> SCOPE AFTER D.PHARM</a></li>
+                            <li><a href="scope_after_d.pharm.html"> PLACEMENT SERVICES</a></li>
                         </ul>
     
                     </li>
@@ -174,7 +175,7 @@
         </div>
         <div class="column">
             <div class="card card-color-2">
-                <h1 class="card-title">EXPERIENCED FACULTY </h1>
+                <h1 class="card-title">EXPERIENCED EDUCATORS </h1>
             </div>
         </div>
         <div class="column">
