--- a/our_courses.html
+++ b/our_courses.html
@@ -190,7 +190,7 @@
                 </tr>
                 <tr style="height:14.9pt;">
                     <td style="width:282.65pt; border-top:0.75pt solid #eeece1; border-right:0.75pt solid #ffffff; padding:6pt 5.62pt; vertical-align:middle; background-color:#dddddd;">
-                        <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">Diploma in Pharmacy Degree</span></p>
+                        <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">Diploma in Pharmacy</span></p>
                     </td>
                     <td style="border-top:0.75pt solid #eeece1; border-right:0.75pt solid #ffffff; border-left:0.75pt solid #ffffff; padding:6pt 5.62pt; vertical-align:middle; background-color:#dddddd;">
                         <p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt;"><span style="font-family:'Times New Roman';">60</span></p>
@@ -205,19 +205,12 @@
             </tbody>
         </table>
         <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><strong><span style="font-family:Arial;">&nbsp;</span></strong></p>
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><strong><span style="font-family:Arial;">Note-1:</span></strong><span style="font-family:Arial;">&nbsp;</span><span style="font-family:Arial;">(The total duration of B.Pharm course will be 04 years, consisting of two semesters each year.There will normally be 90 working days of teaching in each semester as per the guidelines given from time to time by PCI, New Delhi and Dr. APJ AKTU, Lucknow.)</span></p>
+        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><strong><span style="font-family:Arial;">Note:</span></strong><span style="font-family:Arial;">&nbsp;</span><span style="font-family:Arial;">All courses will be regulated as per the guidelines of PCI, New Delhi.</span></p>
         <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">&nbsp;</span></p>
         <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">&nbsp;</span></p>
         <table cellspacing="0" cellpadding="0" style="width:100%; border:0.75pt solid #ffffff; border-collapse:collapse;">
 
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><strong><span style="font-family:Arial;">&nbsp;</span></strong></p>
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><strong><span style="font-family:Arial;">Note-2:</span></strong><span style="font-family:Arial;">&nbsp;</span><span style="font-family:Arial;">(Diploma in Pharmacy (D. Pharm.) is a two year diploma course in pharmacy. 
-            There will normally be 180 working days of teaching each year as per the guidelines  given from time to time by PCI, New Delhi and B.T.E., Lucknow.)</span></p>
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">&nbsp;</span></p>
-        <p style="margin-top:0pt; margin-bottom:0pt; text-align:justify; line-height:normal; font-size:10.5pt;"><span style="font-family:Arial;">&nbsp;</span></p>
-        <table cellspacing="0" cellpadding="0" style="width:100%; border:0.75pt solid #ffffff; border-collapse:collapse;">
-
-
+        
             <tbody>
                 <tr>
                     <td colspan="2" style="width:100%; border-bottom:0.75pt solid #ffffff; padding:6pt 5.62pt; vertical-align:middle; background-color:#5f9ea0;">
