--- a/director_msg.html
+++ b/director_msg.html
@@ -137,12 +137,17 @@
     <div class="container-2">
         <div class="content">
             <heading><h2>MANAGING DIRECTOR'S MESSAGE</h2></heading>
-            <p><b>Welcome to the Modern College of Pharmacy!</b></p>
-            <p>It gives me immense pleasure to utter a few words about the credentials of our college. The college has remained a place of excogitation and excellence in Pharmacy education. As the needs of society and the profession change, the college explores new programs to better prepare upcoming pharmacists for an expanded role in the health care profession. The continuous changes in responsibilities and scope of practice of the pharmacists demand a serious commitment to life-long learning. In order to handle this arduous task, our college has an excellent group of faculty who are highly qualified and intrinsically motivated. They leave no stone unturned to mould the career of our students.
+            <p>
+                <b>In the vast landscape of education, where each institution is a beacon of knowledge, Modern College of Pharmacy stands as a guiding light in the domain of pharmaceutical sciences. </b>
             </p>
-            <p>Our college gives society professionals who are industry ready. They are facilitated to such great extent that they become assets to the organizations they associate with in addition to being responsible citizens of the global healthcare community.
+            <p>
+                As the Managing Director, I am honoured to lead a dedicated team committed to excellence in every aspect of our endeavours. Beyond academics, Modern College of Pharmacy offers a vibrant and inclusive community where students have the opportunity to engage in research, extracurricular activities, and community service initiatives. We believe in cultivating a culture of lifelong learning, leadership, and professional development to empower our students to make meaningful contributions to the field of pharmacy and beyond.
             </p>
-            <p>We would be more than happy to have you at our institute any time so that you could know more about our allegiance to Pharmacy education.
+            <p>
+                As you navigate through our digital corridors, I encourage you to embrace the journey ahead with enthusiasm and determination. Let every click be a step towards enlightenment, and every interaction an opportunity to forge meaningful connections and collaborations.
+            </p>
+            <p>
+                We look forward to welcoming you and supporting you on your journey towards a rewarding and fulfilling career in pharmacy.
             </p>
         </div>
         <div class="content">
