--- a/founder_msg.html
+++ b/founder_msg.html
@@ -137,14 +137,17 @@
         <div class="content">
             <center><h2>FOUNDER CHAIRMAN'S MESSAGE</h2></center>
             <p>
-                <b>“Education is for improving the lives of others and leaving your community and 
-                world better than you found it”</b>
+                <b>“As the founder and chairman, I am thrilled to extend a warm greeting to all visitors to our website.”</b>
             </p>
             <p>
-                India is emerging to be a global leader in information technology, Pharmaceutical technology and Biotechnology. The quality of medicines manufactured in India is proven to be of world class standard and many Indian Pharmaceutical companies have taken the lead to capture the world pharmaceutical Market. To capture it we need a world class competent pharmacist in the area of Manufacturing, Research and Development, Quality Assurance and Marketing.
+                At Modern College of Pharmacy, we are dedicated to providing an exceptional educational experience that prepares students for successful careers in pharmacy and beyond. Our institution is committed to fostering a culture of excellence, innovation, and service, guided by a steadfast commitment to integrity and professionalism.Our dynamic curriculum, delivered by esteemed faculty members, combines rigorous academic coursework with hands-on practical experiences, ensuring that our graduates are equipped with the knowledge, skills, and ethical values necessary to excel in today's rapidly evolving healthcare landscape.
             <p>
-                We are delighted that Modern College of Pharmacy is committed to provide efficient infrastructure, laboratories, equipment and to develop the students as competent pharmacists and highly qualified and dedicated professionals in the future. We are continuously working to improvise the concept of Pharmacy education in today’s global era with an aim to serve humanity better.
-            </p>           
+                Beyond academics, we are proud to cultivate a supportive and inclusive community where diversity is celebrated, and every individual is valued. We believe that collaboration, respect, and mutual understanding are essential to our collective success.
+            </p>   
+            <p>
+                Thank you for considering Modern College of Pharmacy as your academic home. We look forward to welcoming you into our vibrant community.
+            </p>  
+
         </div>
         
         <div class="content">
