--- a/principal_msg.html
+++ b/principal_msg.html
@@ -137,13 +137,13 @@
         <div class="content">
             <center><h2>PRINCIPAL'S MESSAGE</h2></center>
             <p>
-                Modern College of Pharmacy is a pioneer in Pharmacy education that aims to provide quality teaching towards employable standards. Located in a green eco-friendly campus, we offer excellent Pharmacy education to produce professionals involved in drug development to bed side patient care. Large pool of pharmaceutical companies and research organizations participate in this drive.
+                We are thrilled to extend a warm welcome to all visitors to our website, where the boundaries of learning extend beyond the physical realm and the possibilities are as vast as the digital horizon.The Pharmaceutical Science is a rapidly growing field in India. New technology is emerging globally every day in this field, leading to an increasing demand for highly qualified professionals and trained pharmacists to meet the needs of pharmaceutical industries, hospitals, and communities. 
             </p>
             <p>
-                The institute provide all advanced instruments, lush green campus, best Teachers and Researchers who are working round the clock of student welfare and care. 
+                We at Modern College of Pharmacy are committed to provide modern infrastructure supported by highly qualified, dedicated core teaching faculty to impart high quality education and research to our students so as to produce the next generation of pharmacists. The institute provides all the advanced instruments, lush green campus, best teachers and researchers who are working round the clock for student welfare and care. 
             </p>
             <p>
-                There is overall personality development here with our concept of Finishing School. To experience the true joy of Learning come and join us and be a part of our institute.
+                Come and join us to experience the true joy of learning and be a part of our institute.
             </p>
 
         </div>
